# mcp-pandoc

./: pyproject.toml
src/mcp_pandoc/: server.py
